# django-step-by-step

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env.template  .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  HEROKU.md  MACOS.md  MINIKUBE.md  Makefile  NETLIFY.md  Procfile  QUASAR.md  README.md  STEP_BY_STEP.md  TODO.md  bitbucket-pipelines.yml  docker-compose.devcontainer.yml  docker-compose.ec2.yml  docker-compose.yml  index.html  intro.html  package.json  schema.graphql  schema.json  schema.yml  service-worker.js  stack.yml
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: ad_hoc_app_create_update.yml  ad_hoc_app_create_update_cdk.yml  ad_hoc_app_create_update_db_test.yml  ad_hoc_app_create_update_pulumi.yml  ad_hoc_app_create_update_terraform.yml  ad_hoc_app_destroy.yml  ad_hoc_app_destroy_cdk.yml  ad_hoc_app_destroy_terraform.yml  ad_hoc_backend_update.yml  ad_hoc_base_create_update.yml  ad_hoc_base_create_update_cdk.yml  ad_hoc_base_create_update_pulumi.yml  ad_hoc_base_create_update_terraform.yml  ad_hoc_base_destroy.yml  ad_hoc_base_destroy_cdk.yml  ad_hoc_base_destroy_pulumi.yml  ad_hoc_base_destroy_terraform.yml  ad_hoc_env_destroy.yml  (+47 more)
assets/: 404.html-CW1ycXCt.js  app-kI_tQ4DG.js  app.html-DT2C3QqY.js  aws.html-BVtgUaqB.js  cdk.html-DOVHCqKD.js  django.html-DIcyPo_C.js  docker-compose.html-D0OmFQEN.js  github-actions.html-CqpXScJl.js  index.html-CHpHDEBH.js  index.html-CM2fIEYt.js  index.html-Cv-CAssp.js  intro.html-BxYOhErQ.js  intro.html-C1kOsXIF.js  nuxt.html-DrvVXI8-.js  pulumi.html-eCg_MT5-.js  style-CQfdUQsB.css  terraform.html-DCgSOmGG.js  vuepress.html-KFLEKrE-.js
backend/: .gitignore  Dockerfile  Dockerfile.dev  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
backend/apps/accounts/: admin.py  apps.py  auth_views.py  authentication.py  drf_fbv_urls.py  drf_fbv_views.py  forms.py  managers.py  models.py  schema.py  serializers.py  tasks.py  test_auth.py  test_drf_fbv.py  test_gql.py  tests.py  tokens.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_auto_20210328_1426.py  0002_customuser_profile_setup_complete_and_more.py
backend/apps/accounts/templates/: profile.html  register.html
backend/apps/accounts/templates/emails/: account_activation_email.html  email_admins.html
backend/apps/accounts/templates/registration/: login.html
backend/apps/accounts/tests/: test_accounts.py  test_accounts_gql.py  test_auth.py
backend/apps/accounts/urls/: auth_urls.py  drf_fbv_urls.py
backend/apps/accounts/urls/auth/: api_urls.py  mtv_urls.py
backend/apps/accounts/views/: drf_auth_views.py  drf_fbv_views.py  mtv_auth_views.py
backend/apps/blog/: admin.py  apps.py  cbv_urls.py  class_based_views.py  drf_cbv_urls.py  drf_fbv_urls.py  drf_fbv_views.py  factory.py  forms.py  managers.py  models.py  permissions.py  schema.py  serializers.py  test_cbv.py  test_drf_cbvs.py  test_drf_fbvs.py  test_gql.py  tests.py  urls.py  views.py
backend/apps/blog/management/commands/: generate_posts.py
backend/apps/blog/migrations/: 0001_initial.py  0002_auto_20210325_2203.py  0002_auto_20210703_2332.py  0002_post_image.py  0003_auto_20210326_0137.py  0003_auto_20210918_1404.py  0004_alter_post_image.py  0004_postlike_like_on.py  0005_alter_post_created_by.py  0005_auto_20210326_0249.py
backend/apps/blog/templates/: edit_post.html  new_post.html  post.html  post_likes.html  post_pagination.html  posts.html
backend/apps/blog/templates/blog/: post_confirm_delete.html  post_create.html  post_detail.html  post_edit.html  post_list.html
backend/apps/blog/tests/: test_blog.py  test_blog_drf_fbvs.py  test_blog_gql.py
backend/apps/blog/urls/: cbv_urls.py  drf_cbv_urls.py  drf_fbv_urls.py  fbv_urls.py
backend/apps/blog/views/: drf_cbv_views.py  drf_fbv_views.py  views.py
backend/apps/chat/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/apps/chat/migrations/: 0001_initial.py
backend/apps/core/: admin.py  constants.py  db.py  middleware.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/apps/core/management/commands/: create_database.py  pre_update.py  start_beat.py  start_celery_beat.py  start_celery_worker.py  start_worker.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/core/templates/: index.html  nav.html
backend/apps/core/urls/: api_urls.py  mtv_urls.py
backend/backend/: celery_app.py  context_processors.py  schema.py  storage_backends.py  urls.py  wsgi.py
backend/backend/settings/: aws.py  base.py  development.py  ec2.py  heroku.py  production.py  raspberrypi.py  swarm_ec2.py
backend/notebooks/: ORM_example.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  celery_example.ipynb  email_debug.ipynb  m2m_examples.ipynb  post_serializer_example.ipynb
backend/requirements/: base.txt  dev.txt  test.txt
backend/scripts/: start_prod.sh
backend/scripts/aws/: ecs_exec.sh  ssm_port_forward.sh  ssm_start_session.sh
backend/scripts/web/: start_dev.py
backend/static/: main.css
backend/static/openapi/: schema.yml
backend/templates/: 403.html  404.html  base.html  swagger-ui.html
cdk/: cdk.json  package.json
cli/: main.py
cypress/: cypress.json  package.json
deploy/: app.html  aws.html  github-actions.html
docs/: 404.html  dist  index.html  manifest.webmanifest
guide/: index.html
iac/: README.md
intro/: index.html
k6/: script.js
nuxt-app/: .dockerignore  Dockerfile  app.vue  components.json  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
pulumi/: .gitignore  Pulumi.dev.yaml  Pulumi.yaml  index.ts  package.json
quasar-app/: .eslintrc.js  Dockerfile  README.md  package.json  quasar.conf.js  start_dev.sh
raspberrypi/: .env.template  .raspberrypi.template.env  README.md  deploy.sh  destroy.sh  env_vars.sh  env_vars.template.sh  stack.yml
terraform/: .gitignore  main.tf  outputs.tf  providers.tf  variables.tf
topics/: django.html  docker-compose.html  index.html  nuxt.html  vuepress.html
vuepress-docs/: package.json
zh/: index.html  intro.html
(+1170 files in other folders)
