[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Dependencies for django-step-by-step"
authors = ["Brian Caffey <briancaffey2010@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "==3.13.2"

# TODO: complete major version upgrades for dependencies (!)
# Update to Django 3.2 requires additional changes
Django = "~5.1.6"
djangorestframework = "^3.15.2"

# redis
redis = "^5.2.1"

# celery
celery= "^5.4.0"

# for OpenAPI
uritemplate = "^4.1.1"
coreapi = "^2.3.3"
pyyaml = "^6.0.1"

# graphql
graphene-django = "^3.2.2"
django-graphql-jwt = "^0.4.0"
# TODO: watch this issue
# https://github.com/flavors/django-graphql-jwt/issues/241
PyJWT = ">2" # PyJWT 2.10.1
gunicorn = "^23.0.0"
# psycopg2-binary = { version = "^2.8.6", markers = "platform_machine == 'x86_64'" }
psycopg2-binary = "^2.9.10"
aws-secretsmanager-caching = "^1.1.3"
Pillow = "^11.1.0"
graphene-file-upload = "^1.3.0"
django-storages = {extras = ["boto3"], version = "^1.14.4"}
dj-database-url = "^2.3.0"
whitenoise = "^6.8.2"
boto3 = "^1.35.54" # https://github.com/jschneier/django-storages/issues/1482
botocore = "^1.35.54"
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.4.0"

# llama index
llama-index = "*"
llama-index-llms-openai = "*"

# sentry SDK
sentry-sdk = "^1.5.1" # 2.19.2 !

# flower
flower = "^2.0.1" # 2.0.0 !
llama-index-llms-nvidia = "^0.3.1"
django-anymail = {extras = ["amazon-ses"], version = "^12.0"}

# OpenAPI
argh = "^0.31.2"

[tool.poetry.group.test.dependencies]

# test dependencies
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-django = "^4.8.2"
factory-boy = "^3.3.0"
faker = "^33.3.1"

[tool.poetry.group.dev.dependencies]

# dev dependencies
django-debug-toolbar = "^5.0.0"

# for runserver_plus
django-extensions = "^3.2.3"
Werkzeug = "^3.1.3"

# for Jupyter notebooks
ipython = "^8.31.0"
# jupyter's dependency on argon2-cffi can't be installed on Apple M1
# jupyter = { version = "^1.0.0", markers = "platform_machine == 'x86_64'" }
jupyter = "^1.1.1"
django-silk = "^5.3.0"
pyparsing = "^3.2.1"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
